# rtiow

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  pyproject.toml
app/: CMakeLists.txt  main.cpp
bindings/: CMakeLists.txt  bindings.cpp
libs/core/: CMakeLists.txt
libs/core/include/rtcore/: bvh.hpp  camera.hpp  hittable.hpp  hittable_list.hpp  material.hpp  moving_sphere.hpp  sphere.hpp  texture.hpp
libs/core/src/: bvh.cpp  camera.cpp  hittable_list.cpp  image_texture.cpp  moving_sphere.cpp  sphere.cpp
libs/image/: CMakeLists.txt
libs/image/include/rtimage/: writer.hpp
libs/image/src/: stb_impl.cpp  writer.cpp
libs/math/: CMakeLists.txt
libs/math/include/rtmath/: aabb.hpp  color.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  perlin.hpp  ray.hpp  sphere.cpp  sphere.hpp  utils.hpp  vec.hpp
libs/math/src/: hittable_list.cpp  sphere.cpp
python/: main.py
python/rtiow/: __init__.py
